feat: Add source code and tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = stadency
-version = attr: stadency.__version__
-url = https://github.com/zhongjiajie/stadency
+name = stmdency
+version = attr: stmdency.__version__
+url = https://github.com/zhongjiajie/stmdency
 description = A library extracting dependencies between statements in Python program.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -30,10 +30,10 @@ classifiers =
     Environment :: Console
     Topic :: Software Development :: Libraries :: Python Modules
 project_urls =
-    Source = https://github.com/zhongjiajie/stadency
-    Issue Tracker = https://github.com/zhongjiajie/stadency/issues
-    Documentation = https://stadency.readthedocs.io
-    Changelog = https://github.com/zhongjiajie/stadency/releases
+    Source = https://github.com/zhongjiajie/stmdency
+    Issue Tracker = https://github.com/zhongjiajie/stmdency/issues
+    Documentation = https://stmdency.readthedocs.io
+    Changelog = https://github.com/zhongjiajie/stmdency/releases
 
 [options]
 python_requires = >=3.6
@@ -52,7 +52,7 @@ install_requires =
 where=src
 
 [options.package_data]
-stadency =
+stmdency =
   rules/**/*.yaml
 
 [options.extras_require]
