--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,7 @@ commands =
 extras = dev
 # Run both tests and coverage
 commands =
-    python -m pytest --cov=airphin --cov-config={toxinidir}/.coveragerc --cov-report term --cov-report xml:coverage.xml tests/
+    python -m pytest --cov=stmdency --cov-config={toxinidir}/.coveragerc --cov-report term --cov-report xml:coverage.xml tests/
 
 [testenv:local-ci]
 extras = dev
