--- a/setup.cfg
+++ b/setup.cfg
@@ -71,3 +71,40 @@ dev =
     sphinx_rtd_theme>=1.0
     sphinx-copybutton>=0.4.0
     sphinx-argparse>=0.3.2
+
+[flake8]
+max-line-length = 110
+exclude =
+    .git,
+    __pycache__,
+    .pytest_cache,
+    *.egg-info,
+    build,
+    dist,
+    .tox,
+    examples,
+    tests,
+ignore = 
+    # D107: Don't require docstrings on __init__
+    D107,
+    # D105: Missing docstring in magic method
+    D105,
+    # D104: Missing docstring in public package
+    D104,
+    # D100: Missing docstring in public module
+    D100,
+    # W503: Line breaks before binary operators
+    W503,
+
+[isort]
+profile=black
+
+[coverage:run]
+command_line = -m pytest
+
+[coverage:report]
+# Don’t report files that are 100% covered
+skip_covered = True
+show_missing = True
+precision = 2
+
