chore: Change status to alpha

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ keywords =
     all
 # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers =
-    Development Status :: 1 - Planning
+    Development Status :: 3 - Alpha
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
     Programming Language :: Python
