feat: introduce ruff for linter
and remove flake8, isort, and autoflake

--- a/setup.cfg
+++ b/setup.cfg
@@ -55,11 +55,7 @@ stmdency =
 dev =
     # style
     black>=22.8
-    flake8>=4.0
-    flake8-docstrings>=1.6
-    flake8-black>=0.2
-    isort>=5.10
-    autoflake>=1.4
+    ruff>=0.1
     # test
     pytest>=6.2
     pytest-cov>=3.0
@@ -68,33 +64,6 @@ dev =
     sphinx_rtd_theme>=1.0
     sphinx-copybutton>=0.4.0
     sphinx-argparse>=0.3.2
-
-[flake8]
-max-line-length = 110
-exclude =
-    .git,
-    __pycache__,
-    .pytest_cache,
-    *.egg-info,
-    build,
-    dist,
-    .tox,
-    examples,
-    tests,
-ignore = 
-    # D107: Don't require docstrings on __init__
-    D107,
-    # D105: Missing docstring in magic method
-    D105,
-    # D104: Missing docstring in public package
-    D104,
-    # D100: Missing docstring in public module
-    D100,
-    # W503: Line breaks before binary operators
-    W503,
-
-[isort]
-profile=black
 
 [coverage:run]
 command_line = -m pytest
