--- a/tox.ini
+++ b/tox.ini
@@ -21,22 +21,18 @@ envlist = auto-lint, lint, code-test, local-ci, doc-build, py{38,39,310,311,312}
 [testenv]
 allowlist_externals =
     make
-    git
 
 [testenv:auto-lint]
 extras = dev
 commands =
-    python -m isort .
     python -m black .
-    python -m autoflake --in-place --remove-all-unused-imports --ignore-init-module-imports --recursive .
+    python -m ruff check --fix .
 
 [testenv:lint]
 extras = dev
 commands =
-    python -m isort --check .
     python -m black --check .
-    python -m flake8
-    python -m autoflake --remove-all-unused-imports --ignore-init-module-imports --check --recursive .
+    python -m ruff check .
 
 [testenv:doc-build]
 extras = doc
