Mark no cover for typing.TYPE_CHECKING

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,10 @@ dev =
 command_line = -m pytest
 
 [coverage:report]
+# Mark no cover for typing.TYPE_CHECKING, see details https://github.com/nedbat/coveragepy/issues/831
+exclude_lines = 
+    pragma: no cover
+    if TYPE_CHECKING:
 # Don’t report files that are 100% covered
 skip_covered = True
 show_missing = True
