--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,10 @@ jobs:
       matrix:
         # YAML parse `3.10` to `3.1`, so we have to add quotes for `'3.10'`, see also:
         # https://github.com/actions/setup-python/issues/160#issuecomment-724485470
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: [
+          '3.8', '3.9', '3.10', '3.11', '3.12',
+          'pypy3.9', 'pypy3.10',
+        ]
         os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
       - uses: actions/checkout@v3
@@ -80,6 +83,7 @@ jobs:
     timeout-minutes: 15
     needs:
       - pytest
+      - lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
