--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = stmdency
 version = attr: stmdency.__version__
 url = https://github.com/zhongjiajie/stmdency
-description = A library extracting dependencies between statements in Python program.
+description = A library extracting dependencies between Python statements.
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Jay Chung
@@ -23,8 +23,11 @@ classifiers =
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
     Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
     Environment :: Console
     Topic :: Software Development :: Libraries :: Python Modules
+    Topic :: Software Development :: User Interfaces
+    Topic :: Utilities
 project_urls =
     Source = https://github.com/zhongjiajie/stmdency
     Issue Tracker = https://github.com/zhongjiajie/stmdency/issues
